force-app/main/default/objects/SF2SF_Configuration__mdt/SF2SF_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>SF2SF Configuration</label>
    <pluralLabel>SF2SF Configurations</pluralLabel>
</CustomObject>