force-app/main/default/objects/SF2SF_Configuration__mdt/fields/client_id__c.field-meta.xml
<CustomField>
    <fullName>client_id__c</fullName>
    <label>client_id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>