force-app/main/default/objects/SF2SF_Configuration__mdt/fields/login_url__c.field-meta.xml
<CustomField>
    <fullName>login_url__c</fullName>
    <label>login_url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>