force-app/main/default/objects/SF2SF_Configuration__mdt/fields/redirect_url__c.field-meta.xml
<CustomField>
    <fullName>redirect_url__c</fullName>
    <label>redirect_url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>